# Data-visualizer

./: .env.example  .gitignore  .pre-commit-config.yaml  BUILD_PROCESS.md  HUGGINGFACE_GRAPH_TRANSFORMERS.md  HUGGINGFACE_TODOS.md  README.md  SECURITY_AND_FIXES.md  TESTING.md  URL_SIMILARITY_IMPLEMENTATION.md  flush_outputs.sh  global.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  server.sh  start.sh  start_server.sh  start_worker.sh  test_app.py  test_with_real_data.py
.forensics/: sitecustomize.py
.github/workflows/: ci.yml
analysis/: README.md  UNUSED_CODE_REPORT.md  __init__.py  data_validator.py  diagnostic_analyzer.py  fetch_content.py  load_urls.py  pattern_recognition.py  summary_aggregator.py  url_normalizer.py  view_insights.py
analysis/analyzers/: data_quality_analyzer.py  network_analyzer.py  semantic_path_analyzer.py  statistical_analyzer.py  subdomain_analyzer.py  url_component_parser.py
analysis/classifiers/: __init__.py  content.py
analysis/database/: __init__.py  connection.py  models.py
analysis/enhanced_results/: enhanced_analysis_report.txt  enhanced_analysis_results.json  network_results.json  pathway_results.json  semantic_path_results.json  statistical_results.json  subdomain_results.json  url_components_results.json
analysis/extractors/: __init__.py  features.py  metadata.py  text.py
analysis/helpers/: __init__.py  graph_validators.py  quality_forensics.py  scoring_framework.py  semantic_clustering.py  temporal_intelligence.py
analysis/mappers/: pathway_mapper.py
analysis/ml/: __init__.py  batch_detector.py  pattern_recognition.py  url_embeddings.py
analysis/pipeline/: enhanced_pipeline.py  master_pipeline.py  mlx_enhanced_pipeline.py
analysis/processors/: __init__.py  batch_processor.py  (+4 more)
app/: __init__.py  api.py  config.py  database.py  datasets.py  main.py  models.py
catalog/: README.md
config/: __init__.py
database/: schema.sql
datasets/: README.md  sample_words.csv
docs/: COMPLETED_FEATURES.md  GUI_GUIDE.md  prioritized_issues.md  this_needs_to_be_fixed.md  todo_visualizations.md
presets/: comprehensive_analysis.json  quick_overview.json
prompts/: CLAUDE_CODE_ANALYSIS.md
scripts/: README.md  check_quality.py  cleanup_cache.py  find_duplicates.py  save_metrics.py  view_trends.py
server/: __init__.py  cli.py  models.py
tests/: conftest.py  test_data_validator.py  test_gui.py  test_repository_style.py  test_visualizations.py
(+74 files in other folders)
